--- a/26mar_ML_assignment.ipynb
+++ b/26mar_ML_assignment.ipynb
@@ -8,11 +8,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Linear Regression:**\n",
+    "- Imagine you have a scatter plot with points scattered around.\n",
+    "- Linear regression is like drawing a straight line through those points that best fits the general trend.\n",
+    "- It helps you predict one variable (dependent variable) based on the values of another variable (independent variable).\n",
+    "- For example, predicting someone's weight (dependent variable) based on their height (independent variable).\n",
+    "\n",
+    "**Multiple Regression:**\n",
+    "- Now, imagine you have more than one independent variable.\n",
+    "- Multiple regression is like extending linear regression to consider multiple factors when predicting the dependent variable.\n",
+    "- Instead of a straight line, it's like fitting a plane or hyperplane in higher dimensions to capture the relationship.\n",
+    "- For example, predicting someone's weight not only based on their height but also considering their age and gender as additional factors."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -22,11 +32,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Assumptions of Linear Regression:**\n",
+    "\n",
+    "1. **Linearity:**\n",
+    "   - Relationship between variables is a straight line.\n",
+    "\n",
+    "2. **Independence:**\n",
+    "   - Data points are not influenced by each other.\n",
+    "\n",
+    "3. **Homoscedasticity:**\n",
+    "   - Residuals have constant variance.\n",
+    "\n",
+    "4. **Normality of Residuals:**\n",
+    "   - Residuals follow a normal distribution.\n",
+    "\n",
+    "5. **No Perfect Multicollinearity:**\n",
+    "   - Independent variables are not highly correlated.\n",
+    "\n",
+    "6. **No Autocorrelation:**\n",
+    "   - Residuals in time-series data are not correlated.\n",
+    "\n",
+    "**Checking Assumptions:**\n",
+    "\n",
+    "- **Residual Analysis:**\n",
+    "  - Check if residuals are randomly scattered around zero.\n",
+    "\n",
+    "- **Normality Tests:**\n",
+    "  - Statistically test or visually inspect residuals for normal distribution.\n",
+    "\n",
+    "- **Homoscedasticity Checks:**\n",
+    "  - Ensure consistent spread of residuals by plotting them against predicted values.\n",
+    "\n",
+    "- **Linearity:**\n",
+    "  - Verify linearity by examining scatter plots of variables.\n",
+    "\n",
+    "- **VIF for Multicollinearity:**\n",
+    "  - Calculate Variance Inflation Factor (VIF) for each variable.\n",
+    "\n",
+    "- **Durbin-Watson Test:**\n",
+    "  - For time-series data, use Durbin-Watson test to check autocorrelation."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,11 +84,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "1. **Intercept (\\(b\\)):**\n",
+    "   - The intercept represents the predicted value of the dependent variable (\\(Y\\)) when all independent variables are zero. In other words, it is the value of \\(Y\\) when \\(X\\) is zero.\n",
+    "   - It may not always have a practical interpretation, especially if having \\(X\\) equal to zero is not meaningful in your context.\n",
+    "\n",
+    "2. **Slope (\\(m\\)):**\n",
+    "   - The slope represents the change in the predicted value of \\(Y\\) for a one-unit change in the independent variable (\\(X\\)).\n",
+    "   - It indicates the rate of change in \\(Y\\) associated with a one-unit change in \\(X\\).\n",
+    "\n",
+    "### Real-World Example:\n",
+    "\n",
+    "**Scenario: Predicting House Prices**\n",
+    "\n",
+    "Suppose you have a linear regression model to predict house prices based on the size of the house (in square feet). The equation of the model is:\n",
+    "\n",
+    "\\[ \\text{House Price} = 50,000 + 200 \\times \\text{Size of the House} \\]\n",
+    "\n",
+    "Here, \n",
+    "- \\(50,000\\) is the intercept (\\(b\\)): It represents the predicted price when the size of the house is zero, which might not make sense in this context.\n",
+    "- \\(200\\) is the slope (\\(m\\)): It indicates that, on average, for every additional square foot in the size of the house, the predicted price increases by $200.\n",
+    "\n",
+    "**Interpretation:**\n",
+    "- The intercept of $50,000 suggests a baseline price or fixed cost.\n",
+    "- The slope of $200 indicates that, on average, each additional square foot in the size of the house is associated with an increase of $200 in the predicted house price.\n",
+    "\n",
+    "So, if a house has a size of 1,000 square feet, you would predict its price to be \\(50,000 + 200 \\times 1,000 = \\$250,000\\)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,11 +123,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Gradient Descent in Machine Learning:**\n",
+    "\n",
+    "Gradient Descent is an optimization algorithm used in machine learning to minimize the cost function or error of a model. The basic idea is to iteratively move towards the minimum of the cost function by adjusting the model's parameters.\n",
+    "\n",
+    "In summary, Gradient Descent is a fundamental algorithm in machine learning for fine-tuning models by iteratively adjusting parameters to reduce prediction errors and improve performance."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,11 +141,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Multiple Linear Regression:**\n",
+    "\n",
+    "In multiple linear regression, we extend the concept of simple linear regression to accommodate multiple independent variables. While simple linear regression involves predicting a dependent variable based on one independent variable, multiple linear regression predicts the dependent variable using two or more independent variables.\n",
+    "\n",
+    "**Equation:**\n",
+    "\\[ Y = b_0 + b_1 \\cdot X_1 + b_2 \\cdot X_2 + \\ldots + b_n \\cdot X_n + \\varepsilon \\]\n",
+    "\n",
+    "- \\( Y \\): Dependent variable.\n",
+    "- \\( b_0 \\): Y-intercept.\n",
+    "- \\( b_1, b_2, \\ldots, b_n \\): Coefficients for each independent variable.\n",
+    "- \\( X_1, X_2, \\ldots, X_n \\): Independent variables.\n",
+    "- \\( \\varepsilon \\): Error term.\n",
+    "\n",
+    "**Differences from Simple Linear Regression:**\n",
+    "\n",
+    "1. **Number of Variables:**\n",
+    "   - Simple linear regression involves only one independent variable (\\(X\\)), while multiple linear regression incorporates two or more (\\(X_1, X_2, \\ldots, X_n\\)).\n",
+    "\n",
+    "2. **Equation Complexity:**\n",
+    "   - The equation in multiple linear regression is more complex, with multiple coefficients and variables.\n",
+    "\n",
+    "3. **Interpretation of Coefficients:**\n",
+    "   - In simple linear regression, the slope (\\(b_1\\)) represents the change in \\(Y\\) for a one-unit change in \\(X\\). In multiple regression, each \\(b\\) coefficient represents the change in \\(Y\\) for a one-unit change in the corresponding \\(X\\), holding other variables constant.\n",
+    "\n",
+    "4. **Model Flexibility:**\n",
+    "   - Multiple linear regression allows for a more flexible model that can capture the influence of multiple factors on the dependent variable.\n",
+    "\n",
+    "**Example:**\n",
+    "\\[ \\text{House Price} = b_0 + b_1 \\cdot \\text{Size} + b_2 \\cdot \\text{Number of Bedrooms} + b_3 \\cdot \\text{Distance to City Center} + \\varepsilon \\]\n",
+    "\n",
+    "In this example, the house price is predicted based on the size of the house, the number of bedrooms, and the distance to the city center. Each coefficient (\\(b_1, b_2, b_3\\)) represents the impact of the corresponding variable on the house price, while holding the other variables constant."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,11 +185,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Multicollinearity in Multiple Linear Regression:**\n",
+    "\n",
+    "Multicollinearity occurs in multiple linear regression when two or more independent variables in the model are highly correlated, making it challenging to distinguish the individual effects of each variable. This correlation can lead to unstable coefficient estimates, inflated standard errors, and challenges in interpreting the significance of individual predictors.\n",
+    "\n",
+    "**Detecting Multicollinearity:**\n",
+    "\n",
+    "1. **Correlation Matrix:**\n",
+    "   - Examine the correlation matrix between independent variables. High correlation coefficients (close to 1 or -1) indicate potential multicollinearity.\n",
+    "\n",
+    "2. **Variance Inflation Factor (VIF):**\n",
+    "   - Calculate the VIF for each independent variable. VIF measures how much the variance of the estimated regression coefficients is increased due to multicollinearity. A high VIF (typically above 10) suggests a problematic level of multicollinearity.\n",
+    "\n",
+    "**Addressing Multicollinearity:**\n",
+    "\n",
+    "1. **Remove Highly Correlated Variables:**\n",
+    "   - If two variables are highly correlated, consider removing one of them from the model. This can help reduce multicollinearity.\n",
+    "\n",
+    "2. **Combine Variables:**\n",
+    "   - Combine highly correlated variables into a single composite variable. For example, if two variables measure similar aspects of a phenomenon, create a composite variable that represents both.\n",
+    "\n",
+    "3. **Feature Selection:**\n",
+    "   - Use feature selection techniques to choose a subset of the most important variables and eliminate less relevant ones.\n",
+    "\n",
+    "4. **Regularization Techniques:**\n",
+    "   - Techniques like Ridge Regression or Lasso Regression add a penalty term to the regression equation, which can help mitigate multicollinearity.\n",
+    "\n",
+    "5. **Principal Component Analysis (PCA):**\n",
+    "   - Transform the original variables into a set of uncorrelated variables using PCA. However, this may make the interpretation of the model more challenging.\n",
+    "\n",
+    "**Example:**\n",
+    "\n",
+    "Consider a multiple linear regression model predicting income based on education level and years of experience. If education level and years of experience are highly correlated (e.g., because more educated individuals tend to have more experience), it could lead to multicollinearity. Addressing this might involve choosing one variable over the other or combining them into a composite variable."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,11 +230,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Polynomial Regression Model:**\n",
+    "\n",
+    "Polynomial regression is a type of regression analysis where the relationship between the independent variable (\\(X\\)) and the dependent variable (\\(Y\\)) is modeled as an \\(n\\)-th degree polynomial. In contrast to linear regression, which assumes a linear relationship, polynomial regression allows for more flexibility in capturing non-linear patterns in the data.\n",
+    "\n",
+    "**Equation:**\n",
+    "\\[ Y = b_0 + b_1 \\cdot X + b_2 \\cdot X^2 + b_3 \\cdot X^3 + \\ldots + b_n \\cdot X^n + \\varepsilon \\]\n",
+    "\n",
+    "- \\( Y \\): Dependent variable.\n",
+    "- \\( b_0, b_1, b_2, \\ldots, b_n \\): Coefficients.\n",
+    "- \\( X \\): Independent variable.\n",
+    "- \\( n \\): Degree of the polynomial.\n",
+    "- \\( \\varepsilon \\): Error term.\n",
+    "\n",
+    "**Differences from Linear Regression:**\n",
+    "\n",
+    "1. **Nature of Relationship:**\n",
+    "   - Linear regression assumes a linear relationship between \\(X\\) and \\(Y\\), represented by a straight line. Polynomial regression accommodates non-linear relationships by allowing for curves and bends in the line.\n",
+    "\n",
+    "2. **Equation Complexity:**\n",
+    "   - The polynomial regression equation includes terms with higher powers of \\(X\\) (e.g., \\(X^2, X^3\\)), making it more complex than the simple linear regression equation.\n",
+    "\n",
+    "3. **Flexibility:**\n",
+    "   - Polynomial regression is more flexible in fitting curves to the data, making it suitable for scenarios where the relationship between variables is not strictly linear.\n",
+    "\n",
+    "**Example:**\n",
+    "\n",
+    "Consider a scenario where you're predicting the sales of a product (\\(Y\\)) based on the time spent on advertising (\\(X\\)). A linear regression might assume a constant increase in sales for every additional hour of advertising. In contrast, a polynomial regression could capture a more complex relationship, allowing for fluctuations in the rate of sales increase as advertising time increases.\n",
+    "\n",
+    "While polynomial regression can provide a more accurate fit to certain datasets with non-linear patterns, it's important to be cautious about overfitting and to choose the degree of the polynomial carefully to avoid modeling noise in the data."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,11 +272,55 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Advantages of Polynomial Regression:**\n",
+    "\n",
+    "1. **Captures Non-Linear Relationships:**\n",
+    "   - Polynomial regression is capable of capturing and modeling non-linear relationships between the independent and dependent variables. This allows for more flexibility in fitting the data.\n",
+    "\n",
+    "2. **Better Fit for Complex Patterns:**\n",
+    "   - In cases where the relationship is inherently non-linear, polynomial regression can provide a better fit to the data compared to linear regression.\n",
+    "\n",
+    "3. **More Expressive Modeling:**\n",
+    "   - It allows for more expressive modeling, enabling the representation of curves and bends in the relationship between variables.\n",
+    "\n",
+    "**Disadvantages of Polynomial Regression:**\n",
+    "\n",
+    "1. **Overfitting:**\n",
+    "   - Polynomial regression models with high degrees can be prone to overfitting, capturing noise in the data rather than the underlying pattern. This can lead to poor generalization to new data.\n",
+    "\n",
+    "2. **Increased Complexity:**\n",
+    "   - As the degree of the polynomial increases, the model becomes more complex. More complex models may be harder to interpret and may not generalize well to new data.\n",
+    "\n",
+    "3. **Loss of Interpretability:**\n",
+    "   - Higher-degree polynomials result in equations with more terms, which can make it challenging to interpret the individual coefficients and understand the practical significance of each term.\n",
+    "\n",
+    "**When to Prefer Polynomial Regression:**\n",
+    "\n",
+    "1. **Non-Linear Patterns:**\n",
+    "   - Use polynomial regression when the relationship between variables exhibits a clear non-linear pattern that cannot be adequately captured by a straight line.\n",
+    "\n",
+    "2. **Increased Flexibility:**\n",
+    "   - When a more flexible model is needed to fit complex data patterns and linear regression is insufficient.\n",
+    "\n",
+    "3. **Domain Knowledge:**\n",
+    "   - When there is domain knowledge or theoretical reasons to believe that the relationship between variables is polynomial.\n",
+    "\n",
+    "**When to Prefer Linear Regression:**\n",
+    "\n",
+    "1. **Simple Relationships:**\n",
+    "   - Use linear regression when the relationship between variables is primarily linear and there's no evidence of a significant non-linear pattern.\n",
+    "\n",
+    "2. **Interpretability:**\n",
+    "   - When interpretability of the model is crucial, as linear regression models are generally easier to interpret.\n",
+    "\n",
+    "3. **Avoiding Overfitting:**\n",
+    "   - In situations where the available data is limited, avoiding overfitting may favor the use of simpler linear models.\n",
+    "\n",
+    "In summary, the choice between linear and polynomial regression depends on the nature of the data and the underlying relationship between variables. Polynomial regression can be a powerful tool when non-linear patterns are present, but careful consideration is needed to avoid overfitting and maintain model interpretability."
+   ]
   }
  ],
  "metadata": {
