29 mar ML Assignment

--- a/29mar_ML_assignment.ipynb
+++ b/29mar_ML_assignment.ipynb
@@ -10,13 +10,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Lasso Regression is a linear regression technique that incorporates regularization by adding a penalty term equivalent to the absolute value of the magnitude of coefficients. This differs from other regression techniques like Ordinary Least Squares (OLS) by penalizing large coefficients, effectively performing variable selection and shrinking coefficients towards zero simultaneously."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# **Q2. What is the main advantage of using Lasso Regression in feature selection?**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The main advantage of Lasso Regression in feature selection is its ability to shrink coefficients of less important features to zero, effectively eliminating them from the model. This results in a simpler and more interpretable model with potentially better generalization performance."
    ]
   },
   {
@@ -30,7 +39,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In Lasso Regression, the coefficients represent the relationship between the independent variables and the target variable after accounting for the regularization penalty. Coefficients with non-zero values indicate the importance of corresponding features in the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Q4. What are the tuning parameters that can be adjusted in Lasso Regression, and how do they affect the model's performance?**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The main tuning parameter in Lasso Regression is the regularization parameter (lambda or alpha). Increasing lambda increases the strength of regularization, leading to more coefficients being pushed towards zero, thereby increasing model sparsity. However, too high a value of lambda may cause underfitting, so it's important to tune it appropriately."
    ]
   },
   {
@@ -44,7 +67,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Yes, Lasso Regression can be used for non-linear regression problems by employing basis expansion techniques like polynomial features or kernel methods to transform the input features into higher-dimensional space where linear relationships may be more apparent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Q6. What is the difference between Ridge Regression and Lasso Regression?**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The main difference between Ridge Regression and Lasso Regression lies in the penalty term used for regularization. Ridge Regression adds a penalty term equivalent to the square of the magnitude of coefficients, while Lasso Regression adds a penalty term equivalent to the absolute value of the magnitude of coefficients."
    ]
   },
   {
@@ -58,13 +95,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Yes, Lasso Regression can handle multicollinearity in input features by effectively selecting one feature from a group of highly correlated features and pushing the coefficients of others towards zero. This results in a sparse model with only the most important features retained."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Q8. How do you choose the optimal value of the regularization parameter (lambda) in Lasso Regression?**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The optimal value of the regularization parameter (lambda) in Lasso Regression can be chosen using techniques like cross-validation, where different values of lambda are tried on training data, and the one that results in the best performance on validation data is selected. Alternatively, techniques like grid search or randomized search can also be used to find the optimal lambda value."
+   ]
   }
  ],
  "metadata": {
