31mar_ML_assignment completed

--- a/31mar_ML_assignment.ipynb
+++ b/31mar_ML_assignment.ipynb
@@ -93,26 +93,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To integrate the machine learning model into our flask application we can create a `model's` folder in our workflow which contains all of our ML model which we are using in our web app \n",
+    "To integrate the machine learing model with the user interface for the algerian forest fires project, we can use the following steps :\n",
+    "* First create a pickle files of the used machine learning model used in the project\n",
+    "* Add the pickle files in a seperate the `models` folder\n",
+    "* Create an Flask application using the required libraries for the predications .\n",
     "\n",
-    "\n",
-    "1. **User Interface**: You've created a web interface where users can input data points related to temperature, humidity, wind speed, etc., via an HTML form.\n",
-    "\n",
-    "2. **Flask Backend**: In your Flask backend, you've defined a route (`/predictdata`) to handle the form submission. When the form is submitted, Flask extracts the user input, preprocesses it (in this case, scaling the features using a StandardScaler), and passes it to the trained Ridge Regression model (`ridge_model`) for prediction.\n",
-    "\n",
-    "3. **Model Prediction**: The trained Ridge Regression model predicts the forest fire classes based on the input data points.\n",
-    "\n",
-    "4. **Response to User**: Finally, the predicted forest fire class is returned to the user interface, and it's rendered on the webpage.\n",
-    "\n",
-    "For integrating machine learning models with web applications like this, you can use various APIs and libraries:\n",
-    "\n",
-    "- **Flask**: For building the backend of the web application and handling HTTP requests/responses.\n",
-    "- **Scikit-learn (sklearn)**: For training and loading machine learning models.\n",
-    "- **Pickle**: For serializing and deserializing machine learning models.\n",
-    "- **StandardScaler (from sklearn.preprocessing)**: For scaling input data before making predictions.\n",
-    "- **HTML/CSS/JavaScript**: For designing and creating the user interface.\n",
-    "\n",
-    "our implementation already covers these aspects, effectively integrating the machine learning model with the user interface."
+    "## Flask Application working: \n",
+    "* Load the ML model from `Models` folder\n",
+    "* first we get the data from the the form which is present in the user interface .\n",
+    "* transform the datatype of the each datapoint \n",
+    "* use the standard scaling model to scale the datapoints and assign it to the `new_scaled_data` variable \n",
+    "* predict the data using the ridge model assign it to the result variable\n",
+    "* Return the rusult on the html (user Interface)  \n"
    ]
   }
  ],
