11_Apr_AssQ completed

--- a/11_Apr_AssQ.ipynb
+++ b/11_Apr_AssQ.ipynb
@@ -126,9 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q9. A researcher wants to estimate the mean height of a population of trees. They measure the height of a\n",
-    "sample of 50 trees and obtain a mean height of 15 meters and a standard deviation of 2 meters. Use\n",
-    "bootstrap to estimate the 95% confidence interval for the population mean height."
+    "# **Q9. A researcher wants to estimate the mean height of a population of trees. They measure the height of a sample of 50 trees and obtain a mean height of 15 meters and a standard deviation of 2 meters. Use bootstrap to estimate the 95% confidence interval for the population mean height.**"
    ]
   },
   {
